--- a/admin/src/Components/Sidebar.css
+++ b/admin/src/Components/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    background-color: black;
+    background-color: rgb(46, 43, 43);
     padding-top: 2rem;
     width: 100%;
     max-width: 250px;
