--- a/admin/src/Components/Navbar.css
+++ b/admin/src/Components/Navbar.css
@@ -1,35 +1,46 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    margin:0;
-    background-color: #e8e4e4; 
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0.5rem;
+  margin: 0;
+  background-color: rgb(230, 195, 21);
+}
 
-  .navbar-name{
-    display: flex;
-    flex-direction: column;
-  }
-  
-  /* .navbar-logo {
+.navbar-name {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+
+/* .navbar-logo {
     text-align: center;
   } */
-  
-  .navbar-title {
-    font-size: 1.5rem; 
-  }
-  
-  .navbar-subtitle {
-    margin-top: 0.5rem; 
-    font-weight: bold;
-  }
-  
-  .navbar-login{
-    background-color: black;
-    color: white;
-    width: 6rem;
-    padding: 1rem;
-    border-radius: 20px;
-    font-size: 1rem;
-  }
+
+.navbar-title {
+  font-size: 2rem;
+}
+
+.navbar-subtitle {
+  margin-top: 10px;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.navbar-login {
+  background-color: black;
+  color: white;
+  width: 6rem;
+  padding: 1rem;
+  border-radius: 20px;
+  font-size: 1rem;
+}
+
+.nav-profile {
+  height: 100px;
+  width: 50px;
+  padding: 0;
+  margin-right: 1rem;
+  /* border-radius: 100%; */
+  cursor: pointer;
+}
